// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getReviewStatusText() has reviews ready 1`] = `
<ForwardRef(Styled(styled.h3))>
  Next Review: 
  <ForwardRef(styled.span)>
    Now!
  </ForwardRef(styled.span)>
</ForwardRef(Styled(styled.h3))>
`;

exports[`getReviewStatusText() no reviews unlocked 1`] = `
<ForwardRef(Styled(styled.h3))>
  No reviews unlocked
</ForwardRef(Styled(styled.h3))>
`;

exports[`getReviewStatusText() on vacation 1`] = `
<ForwardRef(Styled(styled.h3))>
  On Vacation:
   
  <ForwardRef(styled.span)>
    since
    Dec 26th 2017
  </ForwardRef(styled.span)>
</ForwardRef(Styled(styled.h3))>
`;

exports[`getReviewStatusText() review date is future 1`] = `
<ForwardRef(Styled(styled.h3))>
  Next Review:
   
  <ForwardRef(styled.span)>
    in
     
    about 2 hours
  </ForwardRef(styled.span)>
</ForwardRef(Styled(styled.h3))>
`;

exports[`getReviewStatusText() review date is past 1`] = `
<ForwardRef(Styled(styled.h3))>
  Next Review: 
  <ForwardRef(styled.span)>
    Loading...
  </ForwardRef(styled.span)>
</ForwardRef(Styled(styled.h3))>
`;

exports[`getReviewStatusText() sane default 1`] = `
<ForwardRef(Styled(styled.h3))>
  Next Review: 
  <ForwardRef(styled.span)>
    Loading...
  </ForwardRef(styled.span)>
</ForwardRef(Styled(styled.h3))>
`;

exports[`getReviewStatusText() user is loading 1`] = `
<ForwardRef(Styled(styled.h3))>
  Next Review: 
  <ForwardRef(styled.span)>
    Loading...
  </ForwardRef(styled.span)>
</ForwardRef(Styled(styled.h3))>
`;
